Nationwide_2024/Assignment01/01Seoul/답지/Terraform/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wsi-alb 
  namespace: wsi 
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: wsi-alb
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: 'ip'
    alb.ingress.kubernetes.io/healthcheck-path: /healthcheck
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '5'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '3'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '3'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2' 
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30
spec:
  rules:
    - http:
        paths:
          - path: /v1/customer
            pathType: Prefix
            backend:
              service:
                name: customer-svc
                port:
                  number: 80
          - path: /healthcheck
            pathType: Prefix
            backend:
              service:
                name: customer-svc
                port:
                  number: 80
    - http:
        paths:
          - path: /v1/product
            pathType: Prefix
            backend:
              service:
                name: product-svc
                port:
                  number: 80
          - path: /healthcheck
            pathType: Prefix
            backend:
              service:
                name: product-svc
                port:
                  number: 80
    - http:
        paths:
          - path: /v1/order
            pathType: Prefix
            backend:
              service:
                name: order-svc
                port:
                  number: 80
          - path: /healthcheck
            pathType: Prefix
            backend:
              service:
                name: order-svc
                port:
                  number: 80
